# safarnama

./: README.md  condig.yaml  example.env  non_existing_config.yaml  pyproject.toml
src/safarnama/: __init__.py  config.py  crawler.py  db.py  html_cleaner.py  logger_setup.py  main.py  searcher.py
src/tests/: test_searcher.py  test_suits.py
